syntax = "proto3";

package com.shoalter.grpc;
option java_multiple_files = true;
option java_package = "com.shoalter.grpc";

service StockService {
  rpc unaryGetStock(StockRequest) returns (StockResponse) {}
  rpc serverSideStreamingGetStock(StockRequest) returns (stream StockResponse) {}
  rpc clientSideStreamingGetStatisticsOfStocks (stream StockRequest) returns (StockResponse) {}
  rpc bidirectionalStreamingGetListOfStocks(stream StockRequest) returns (StockResponse) {}
}

message StockRequest {
  int32 id = 1;
}

message StockResponse {
  int32 id = 1;
  string productName = 2;
  double price = 3;
  int32 offerNumber = 4;
}